# Tritium

./: README.md  stack.yaml  tritium.cabal
app/: Main.hs
src/Tritium/: Import.hs  Menu.hs  Screen.hs  UI.hs
