name:                tritium
version:             0.1.0.0
synopsis:            Procedurally generated coop space game
description:         Please see README.md
homepage:            http://github.com/sulami/tritium#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Schroer
maintainer:          sulami@peerwire.org
copyright:           2015 Robin Schroer
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tritium.Import
                     , Tritium.Menu
  build-depends:       base >= 4.7 && < 5
                     , FunGEn
                     , OpenGL
  default-language:    Haskell2010

executable tritium
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tritium
                     , FunGEn
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sulami/tritium

